Update Active Lifestyle description in Current Focus

--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
                         
                         <p><strong>• Thought Leadership:</strong> Contributing insights on practical AI implementation for professionals</p>
                         
-                        <p><strong>• Active Lifestyle:</strong> Competing in running events, playing tennis, sailing, and astrophotography with advanced equipment</p>
+                        <p><strong>• Active Lifestyle:</strong> Competing in running events, playing tennis, sailing, and pursuing astrophotography</p>
                     </div>
                 </div>
             </div>
