--- a/public/index.html
+++ b/public/index.html
@@ -6,11 +6,11 @@
     <meta name="description" content="Brett Stark - Director of Program Management, AI entrepreneur, and technology leader with 30+ years experience building AI Second Act newsletter">
     <meta name="keywords" content="Brett Stark, Program Management, AI Second Act, Automotive Electronics, Leadership, AI entrepreneur">
     <meta name="author" content="Brett Stark">
-    <meta property="og:title" content="Brett Stark - Tech Leader & AI Entrepreneur">
+    <meta property="og:title" content="Brett Stark - Tech Leader & AI Strategist">
     <meta property="og:description" content="Director of Program Management with 30+ years in tech, building AI Second Act newsletter for mid-career professionals">
     <meta property="og:type" content="website">
     <meta property="og:url" content="https://brettstark.com">
-    <title>Brett Stark - Tech Leader & AI Entrepreneur</title>
+    <title>Brett Stark - Tech Leader & AI Strategist</title>
     <link rel="stylesheet" href="styles.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -25,7 +25,7 @@
                 </div>
                 <div class="hero-text">
                     <h1>Brett Stark</h1>
-                    <h2>Tech Leader & AI Entrepreneur</h2>
+                    <h2>Tech Leader & AI Strategist</h2>
                     <p class="tagline">30+ years engineering excellence • From Adelaide Hills to Chicago • Program Director adding AI thought leadership and expertise</p>
                     <div class="location">📍 <a href="https://maps.google.com/?q=Libertyville,IL" target="_blank" rel="noopener">Libertyville, IL</a></div>
                 </div>
