feat: add SEO, dark mode, and accessibility improvements

--- a/public/index.html
+++ b/public/index.html
@@ -3,20 +3,29 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Brett Stark - Tech Leader & AI Strategist</title>
     <meta name="description" content="Brett Stark - Director of Program Management, AI entrepreneur, and technology leader with 30+ years experience building AI Second Act newsletter">
-    <meta name="keywords" content="Brett Stark, Program Management, AI Second Act, Automotive Electronics, Leadership, AI entrepreneur">
     <meta name="author" content="Brett Stark">
+
+    <!-- SEO & Social Previews -->
+    <link rel="canonical" href="https://about.mydomain.com">
     <meta property="og:title" content="Brett Stark - Tech Leader & AI Strategist">
     <meta property="og:description" content="Director of Program Management with 30+ years in tech, building AI Second Act newsletter for mid-career professionals">
     <meta property="og:type" content="website">
-    <meta property="og:url" content="https://brettstark.com">
-    <title>Brett Stark - Tech Leader & AI Strategist</title>
+    <meta property="og:url" content="https://about.mydomain.com">
+    <meta property="og:image" content="https://about.mydomain.com/og-image.png">
+    <meta name="twitter:card" content="summary_large_image">
+    <meta name="twitter:title" content="Brett Stark - Tech Leader & AI Strategist">
+    <meta name="twitter:description" content="Director of Program Management with 30+ years in tech, building AI Second Act newsletter for mid-career professionals">
+    <meta name="twitter:image" content="https://about.mydomain.com/og-image.png">
+    
     <link rel="stylesheet" href="styles.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&display=swap" rel="stylesheet">
 </head>
 <body>
+    <a class="skip-link" href="#main">Skip to content</a>
     <header class="hero">
         <div class="container">
             <div class="hero-content">
@@ -33,7 +42,7 @@
         </div>
     </header>
 
-    <main>
+    <main id="main">
         <section class="about">
             <div class="container">
                 <div class="section-grid">
