feat: add reduced motion, outbound link tracking, and 404 page

--- a/public/index.html
+++ b/public/index.html
@@ -33,7 +33,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&display=swap" rel="stylesheet">
 
     <!-- Analytics -->
-    <script defer data-domain="about.brettstark.com" src="https://plausible.io/js/script.js"></script>
+    <script defer data-domain="about.brettstark.com" src="https://plausible.io/js/plausible.outbound-links.js"></script>
 
     <!-- JSON-LD Schema -->
     <script type="application/ld+json">
