feat: add bullet points to AI Business Ventures section

--- a/public/index.html
+++ b/public/index.html
@@ -88,12 +88,12 @@
                     <div class="bio-section">
                         <h3>AI Business Ventures</h3>
                         <p><strong>• AI Second Act:</strong></p>
-                        <p class="indent"><strong>Target Audience:</strong> Operating executives who need to bridge AI promise and operational reality</p>
-                        <p class="indent"><strong>Mission:</strong> Help mid-career professionals master AI strategy without becoming obsolete</p>
+                        <p class="indent"><strong>• Target Audience:</strong> Operating executives who need to bridge AI promise and operational reality</p>
+                        <p class="indent"><strong>• Mission:</strong> Help mid-career professionals master AI strategy without becoming obsolete</p>
                         
                         <p><strong>• AI Builder Lab:</strong></p>
-                        <p class="indent"><strong>Target Audience:</strong> Professionals wanting to learn AI-assisted development</p>
-                        <p class="indent"><strong>Mission:</strong> Teaching "vibe coding" - rapid prototyping without traditional coding barriers</p>
+                        <p class="indent"><strong>• Target Audience:</strong> Professionals wanting to learn AI-assisted development</p>
+                        <p class="indent"><strong>• Mission:</strong> Teaching "vibe coding" - rapid prototyping without traditional coding barriers</p>
                     </div>
                     
                     <div class="bio-section">
