--- a/public/index.html
+++ b/public/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Brett Stark - Tech Leader & AI Strategist</title>
-    <meta name="description" content="Brett Stark - Director of Program Management, AI entrepreneur, and technology leader with 30+ years experience building AI Second Act newsletter">
+    <meta name="description" content="Brett Stark - Director of Program Management, AI strategist, and technology leader with 30+ years experience building AI Second Act newsletter">
     <meta name="author" content="Brett Stark">
     <meta name="theme-color" content="#667eea">
 
@@ -63,7 +63,7 @@
                 <div class="hero-text">
                     <h1>Brett Stark</h1>
                     <h2>Tech Leader & AI Strategist</h2>
-                    <p class="tagline">30+ years engineering excellence • From Adelaide Hills to Chicago • Program Director adding AI thought leadership and expertise</p>
+                    <p class="tagline">30+ years engineering excellence • From Adelaide Hills to Illinois • Program Director adding AI thought leadership and expertise</p>
                     <div class="location">📍 <a href="https://maps.google.com/?q=Libertyville,IL" target="_blank" rel="noopener noreferrer">Libertyville, IL</a></div>
                 </div>
             </div>
