Docs: add Vercel runtime note to QUALITY-SETUP.md (prefer engines auto-detect; avoid hard-coded runtime)

--- a/public/index.html
+++ b/public/index.html
@@ -303,7 +303,7 @@
                 target="_blank"
                 rel="noopener noreferrer"
                 id="beehiiv-link"
-                >View Publication →</a
+                >View Profile →</a
               >
             </div>
           </div>
