--- a/public/index.html
+++ b/public/index.html
@@ -45,7 +45,10 @@
       rel="preload"
       href="styles.css"
       as="style"
-      onload="this.onload=null;this.rel='stylesheet'"
+      onload="
+        this.onload = null;
+        this.rel = 'stylesheet';
+      "
     />
     <noscript><link rel="stylesheet" href="styles.css" /></noscript>
 
